--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,4 @@
 @import "global/variables";
 @import "global/global";
-// @import "custom/vsc-img-compare";
-@import "custom/occo";
+@import "custom/mascara";
 @import "custom/mediaqueries";
