--- a/src/sass/custom/_mascara.scss
+++ b/src/sass/custom/_mascara.scss
@@ -6,21 +6,28 @@ $mascaraplum: #86456f;
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    margin: 0 0 40px 0;
+    margin: 0 0 4rem 0;
     padding: 0;
   }
   .sectionRow.-wrap {
     flex-wrap: wrap;
   }
+  h1 {
+    line-height: 1.2;
+    margin-bottom: 1rem;
+  }
   h2 {
-    text-align: center;
+
   }
   h4 {
     // margin-top: 2rem;
     margin-bottom: 0;
   }
+  h5 {
+    margin: 1rem 0 2rem 0;
+  }
   h6 {
-    margin: 40px 0;
+    margin: 4rem 0;
   }
   .btn {
     color: #FFF;
@@ -51,6 +58,10 @@ $mascaraplum: #86456f;
     @include clearfix;
   }
 } //content-wrapper
+
+.introText {
+  padding-right: 10%;
+}
 
 .slmCopy, .chooseMpp-text {
   text-align: right;
