--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -94,12 +94,12 @@ body {
 }
 
 .content-wrapper h3 {
-  font-size: 35px;
+  font-size: 40px;
   line-height: 1.3;
 }
 
 .content-wrapper h4 {
-  font-size: 40px;
+  font-size: 35px;
   line-height: 1.4;
   font-weight: 300;
 }
@@ -213,8 +213,20 @@ body {
   margin-bottom: 1rem;
 }
 
+.content-wrapper h2 {
+  line-height: 1.2;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
+}
+
+.content-wrapper h3 {
+  font-weight: 400;
+}
+
 .content-wrapper h4 {
-  margin-bottom: 0;
+  font-size: 2.9rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 .content-wrapper h5 {
@@ -234,7 +246,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   background-color: #424649;
-  padding: 8px 24px;
+  padding: .8rem 2.4rem;
 }
 
 .content-wrapper .btn:hover {
@@ -273,20 +285,40 @@ body {
   padding-right: 10%;
 }
 
-.slmCopy, .chooseMpp-text {
-  text-align: right;
-}
-
-.slmText, .mppText {
-  padding-top: 8%;
-}
-
 .slmText {
+  text-align: right;
   padding-left: 4%;
+  padding-right: 2%;
 }
 
 .mppText {
   padding-right: 4%;
+  padding-left: 2%;
+}
+
+#choose .chooseSlm {
+  margin-bottom: 0;
+}
+
+#choose .chooseSlm .chooseSlm-text {
+  width: 44%;
+  padding-top: 8%;
+  padding-left: 14%;
+}
+
+#choose .chooseSlm .chooseSlm-img {
+  width: 50%;
+}
+
+#choose .chooseMpp-img {
+  width: 40%;
+}
+
+#choose .chooseMpp-text {
+  width: 44%;
+  text-align: right;
+  padding-top: 10%;
+  padding-right: 14%;
 }
 
 #differences {
@@ -314,17 +346,41 @@ body {
   width: 30%;
 }
 
+#differences .proTip {
+  background-color: rgba(255, 227, 233, 0.4);
+  width: 100%;
+  padding: 1% 12%;
+  margin: 4rem auto;
+}
+
+#differences .proTip p {
+  margin-bottom: 0;
+}
+
 #beforeAfter .beforeAfter-title {
   width: 100%;
+  text-align: center;
 }
 
 #beforeAfter .beforeAfter-l, #beforeAfter .beforeAfter-r {
   flex-direction: column;
 }
 
+#beforeAfter .beforeAfter-l h5, #beforeAfter .beforeAfter-r h5 {
+  text-align: center;
+}
+
 #beforeAfter .beforeAfter-text {
-  width: 40%;
+  width: 84%;
   margin: 0 auto;
+}
+
+#beforeAfter .beforeAfter-text a {
+  text-decoration: underline;
+}
+
+#beforeAfter .beforeAfter-text a:hover {
+  color: #8d4875;
 }
 
 /*# sourceMappingURL=styles.css.map */
