--- a/src/sass/custom/_mascara.scss
+++ b/src/sass/custom/_mascara.scss
@@ -1,5 +1,9 @@
 // Custom styles for the Mascara page
-$mascaraplum: #86456f;
+
+// $mascaraplum: #86456f;
+$mascaraplum: rgba(134, 69, 111, 1);
+// $mascarapink: #ffe3e9;
+$mascarapink: rgba(255, 227, 233, .4);
 
 .content-wrapper {
   .sectionRow {
@@ -17,11 +21,17 @@ $mascaraplum: #86456f;
     margin-bottom: 1rem;
   }
   h2 {
-
+    line-height: 1.2;
+    margin-top: 1.2rem;
+    margin-bottom: 1.2rem;
+  }
+  h3 {
+    font-weight: 400;
   }
   h4 {
-    // margin-top: 2rem;
-    margin-bottom: 0;
+    font-size: 2.9rem;
+    line-height: 1.2;
+    margin-bottom: 1rem;
   }
   h5 {
     margin: 1rem 0 2rem 0;
@@ -29,6 +39,7 @@ $mascaraplum: #86456f;
   h6 {
     margin: 4rem 0;
   }
+
   .btn {
     color: #FFF;
     text-transform: uppercase;
@@ -38,7 +49,7 @@ $mascaraplum: #86456f;
     font-size: 16px;
     font-weight: 400;
     background-color: $gray700;
-    padding: 8px 24px;
+    padding: .8rem 2.4rem;
 
     &:hover {
       background-color: $gray600;
@@ -59,26 +70,52 @@ $mascaraplum: #86456f;
   }
 } //content-wrapper
 
+// intro section
 .introText {
   padding-right: 10%;
 }
 
-.slmCopy, .chooseMpp-text {
-  text-align: right;
-}
-
+// products section
 .slmText, .mppText {
-  padding-top: 8%;
+  // padding-top: 2%;
 }
 .slmText {
+  text-align: right;
   padding-left: 4%;
+  padding-right: 2%;
 }
 .mppText {
   padding-right: 4%;
+  padding-left: 2%;
 }
 
-#differences {
+// choose section
+#choose {
+  .chooseSlm {
+    margin-bottom: 0;
 
+    .chooseSlm-text {
+      width: 44%;
+      padding-top: 8%;
+      padding-left: 14%;
+    }
+    .chooseSlm-img {
+      width: 50%;
+    }
+  } // chooseSlm
+  .chooseMpp-img {
+    width: 40%;
+  }
+  .chooseMpp-text {
+    width: 44%;
+    text-align: right;
+    padding-top: 10%;
+    padding-right: 14%;
+  }
+}
+
+// differences section
+#differences {
   position: relative;
 
   .differences-img {
@@ -99,18 +136,40 @@ $mascaraplum: #86456f;
     right: 3%;
     width: 30%;
   }
+  .proTip {
+    background-color: $mascarapink;
+    width: 100%;
+    padding: 1% 12%;
+    margin: 4rem auto;
+
+    p {
+      margin-bottom: 0;
+    }
+  }
 } // differences
 
 #beforeAfter {
   .beforeAfter-title {
     width: 100%;
+    text-align: center;
   }
   .beforeAfter-l, .beforeAfter-r {
     flex-direction: column;
-    // align-items: center;
+
+    h5 {
+      text-align: center;
+    }
   }
   .beforeAfter-text {
-    width: 40%;
+    width: 84%;
     margin: 0 auto;
+
+    a {
+      text-decoration: underline;
+
+      &:hover {
+        color: lighten($mascaraplum, 2%);
+      }
+    }
   }
-} // remove
+} // before after
