--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -301,17 +301,42 @@ body {
   left: 50%;
 }
 
-.slmImg, .mppImg {
+.slm, .mpp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  margin: 0 0 4rem 0;
+  padding: 0;
+}
+
+.slmImg {
+  width: 50%;
+}
+
+.mppImg {
+  -webkit-box-ordinal-group: 2;
+  -ms-flex-order: 1;
+  order: 1;
   width: 50%;
 }
 
 .slmText {
+  width: 50%;
   text-align: right;
   padding-left: 4%;
   padding-right: 2%;
 }
 
 .mppText {
+  -webkit-box-ordinal-group: 3;
+  -ms-flex-order: 2;
+  order: 2;
+  width: 50%;
   padding-right: 4%;
   padding-left: 2%;
 }
@@ -442,6 +467,154 @@ body {
 
 #beforeAfter .beforeAfter-wrapper .beforeAfter-l .beforeAfter-text a:hover, #beforeAfter .beforeAfter-wrapper .beforeAfter-r .beforeAfter-text a:hover {
   color: #8d4875;
+}
+
+@media only screen and (max-width: 599px) {
+  .content-wrapper h1 {
+    font-size: 4.5rem;
+  }
+  .content-wrapper h2 {
+    font-size: 3.5rem;
+  }
+  .content-wrapper h3 {
+    font-size: 2.6rem;
+  }
+  .content-wrapper h4 {
+    font-size: 3rem;
+    margin-top: 1rem;
+  }
+  .content-wrapper h5 {
+    font-size: 2.5rem;
+  }
+  .content-wrapper h6 {
+    font-size: 2rem;
+  }
+  .content-wrapper p {
+    font-size: 1.8rem;
+  }
+  #intro {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+  }
+  #intro .introText {
+    position: inherit;
+    top: inherit;
+    left: inherit;
+    width: 98%;
+  }
+  .slm, .mpp {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .slmImg, .mppImg {
+    width: 100%;
+  }
+  .slmText, .mppText {
+    width: 100%;
+    text-align: center;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+  .mppImg {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+  }
+  .mppText {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+  #choose .chooseSlm {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  #choose .chooseSlm .chooseSlm-text {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    width: 100%;
+    padding-top: 0;
+    padding-left: 0;
+  }
+  #choose .chooseSlm .chooseSlm-img {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    width: 100%;
+  }
+  #choose .chooseMpp {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+  }
+  #choose .chooseMpp .chooseMpp-text {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    width: 100%;
+    padding-top: 0;
+    padding-right: 0;
+    text-align: center;
+  }
+  #choose .chooseMpp .chooseMpp-img {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    width: 100%;
+  }
+  #differences .differences-img {
+    margin-bottom: 0;
+    width: 100%;
+  }
+  #differences .differences-l, #differences .differences-r {
+    margin-bottom: 3rem;
+  }
+  #differences .differencesText-l {
+    position: inherit;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  #differences .differencesText-r {
+    position: inherit;
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+  #differences .proTip {
+    max-height: inherit;
+    padding-bottom: 2%;
+  }
+  #beforeAfter .beforeAfter-wrapper {
+    text-align: center;
+  }
+  #beforeAfter .beforeAfter-wrapper .beforeAfter-l h5, #beforeAfter .beforeAfter-wrapper .beforeAfter-r h5 {
+    text-align: center;
+  }
+  #beforeAfter .beforeAfter-wrapper .beforeAfter-l .beforeAfter-imgs img, #beforeAfter .beforeAfter-wrapper .beforeAfter-r .beforeAfter-imgs img {
+    width: 100px;
+  }
+  #beforeAfter .beforeAfter-wrapper .beforeAfter-l .beforeAfter-imgs .beforeImg, #beforeAfter .beforeAfter-wrapper .beforeAfter-r .beforeAfter-imgs .beforeImg {
+    margin-right: 0;
+  }
+  #beforeAfter .beforeAfter-wrapper .beforeAfter-l .beforeAfter-imgs .beforeText, #beforeAfter .beforeAfter-wrapper .beforeAfter-r .beforeAfter-imgs .beforeText {
+    margin-right: 0;
+  }
+  #beforeAfter .beforeAfter-wrapper .beforeAfter-l .beforeAfter-text, #beforeAfter .beforeAfter-wrapper .beforeAfter-r .beforeAfter-text {
+    text-align: center;
+  }
 }
 
 
