--- a/src/sass/custom/_mascara.scss
+++ b/src/sass/custom/_mascara.scss
@@ -77,6 +77,10 @@ $mascaratip: #ceb7be;
     position: absolute;
     top: 14%;
     left: 50%;
+
+    p {
+      width: 92%;
+    }
   }
 }
 // products section
