--- a/src/sass/custom/_mediaqueries.scss
+++ b/src/sass/custom/_mediaqueries.scss
@@ -15,6 +15,7 @@
     h4 {
       font-size: 3rem;
       margin-top: 1rem;
+      margin-bottom: 1rem;
     }
     h5 {
       font-size: 2.5rem;
@@ -53,6 +54,9 @@
     padding-left: 1%;
     padding-right: 1%;
   }
+  // .slmText {
+  //
+  // }
   .mppImg {
     order: 2;
   }
@@ -65,7 +69,7 @@
     .chooseSlm {
       flex-direction: column;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 5rem;
 
       .chooseSlm-text {
         order: 2;
@@ -88,6 +92,10 @@
         padding-top: 0;
         padding-right: 0;
         text-align: center;
+
+        h3 {
+          padding-left: 0;
+        }
       }
       .chooseMpp-img {
         order: 1;
@@ -172,7 +180,7 @@
     } // beforeAfter-wrapper
   } //beforeAfter
 
-} // Mobile - everything smaller than 500
+} // Mobile - everything smaller than 600
 @media only screen and (max-width: 1024px) and (min-width: 599px) {
   .content-wrapper {
     h1 {
@@ -180,7 +188,7 @@
       line-height: 1;
     }
     h2 {
-      font-size: 4rem;
+      font-size: 4.1rem;
     }
     h3 {
       font-size: 2.6rem;
@@ -346,3 +354,14 @@
     } // beforeAfter-wrapper
   } // before after
 } // min 600 to max 650 - Tablet exceptions
+@media only screen and (max-width: 460px) {
+  #products {
+    .slmText, .mppText {
+      h2 {
+        max-width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+} // under 460px - mobile exceptions
